--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <nav class="navbar">
             <ul class="navbar-ul">
                 <div class="navbar-left">
-                    <a href="index.html"><img id="logo" src="" alt="logo" /></a>
-                    <p id="navbar-title">Site Title</p>
+                    <a href="index.html"><img id="logo" src="../img/reBind-small.png" alt="logo" /></a>
                 </div>
                 <div class="navbar-right">
-                    <li><a class="navbar-link" href="./index.html">Home</a></li>
-                    <li><a class="navbar-link" href="./about.html">About</a></li>
-                    <li><a class="navbar-link" href="./contact.html">Contact</a></li>
+                    <li><a class="navbar-link whiteText" href="./index.html">Home</a></li>
+                    <li><a class="navbar-link whiteText" href="./about.html">About</a></li>
+                    <li><a class="navbar-link whiteText" href="./contact.html">Contact</a></li>
                 </div>
             </ul>
         </nav>
@@ -50,7 +49,7 @@
         <!-- FOOTER -->
         <footer class="footer">
             <ul class="footer-ul">
-                <p class="footer-copyright">&#xa9; copyright</p>
+                <p class="footer-copyright whiteText">&#xa9; copyright</p>
                 <p>&#124;</p>
                 <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-1"></a></li>
                 <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-2"></a></li>
