hero bg image + footer fontawesome icons

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <main>
             <!-- HERO -->
             <section class="hero">
-                <h1 class="hero-header"> Hero </h1>
-                <a href="./about.html" class="hero-aboutLink">Prompt to go to about &#8594;</a>
+                <div class="hero-textBox">
+                    <h1 class="hero-header textColor-2"> Hero </h1>
+                    <a href="./about.html" class="hero-aboutLink textColor-2">Prompt to go to about &#8594;</a>
+                </div>
+
             </section>
             <!-- BODY IMG/PARAGRAPH -->
             <section class="pageText">
@@ -49,16 +52,16 @@
         <!-- FOOTER -->
         <footer class="footer">
             <ul class="footer-ul">
-                <p class="footer-copyright whiteText">&#xa9; copyright</p>
+                <p class="footer-copyright textColor-2">&#xa9; Angel Thomas</p>
                 <p>&#124;</p>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-1"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-2"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-3"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-4"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram textColor-2"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter textColor-2"></a></li>
+                <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr textColor-2"></a></li>
+                <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest textColor-2"></a></li>
             </ul>
         </footer>
     </header>
 
 </body>
-
+<script src="https://kit.fontawesome.com/f88d7ccc52.js" crossorigin="anonymous"></script>
 </html>
