--- a/about.html
+++ b/about.html
@@ -16,40 +16,39 @@
         <nav class="navbar">
             <ul class="navbar-ul">
                 <div class="navbar-left">
-                    <a href="index.html"><img id="logo" src="" alt="logo" /></a>
-                    <p id="navbar-title">Site Title</p>
+                    <a href="index.html"><img id="logo" src="../img/reBind-small.png" alt="logo" /></a>
                 </div>
                 <div class="navbar-right">
-                    <li><a class="navbar-link" href="./index.html">Home</a></li>
-                    <li><a class="navbar-link" href="./about.html">About</a></li>
-                    <li><a class="navbar-link" href="./contact.html">Contact</a></li>
+                    <li><a class="navbar-link whiteText" href="./index.html">Home</a></li>
+                    <li><a class="navbar-link whiteText" href="./about.html">About</a></li>
+                    <li><a class="navbar-link whiteText" href="./contact.html">Contact</a></li>
                 </div>
             </ul>
         </nav>
-        <!-- PAGE CONTENT -->
-        <main>
-            <!-- HEADER -->
-            <section class="main-title">
-                <h1 class="title-h1 abt-title">About</h1>
-            </section>
-            <!-- VIDEO & TEXT -->
-            <section class="pageText">
-                
-            </section>
-        </main>
-        <!-- FOOTER -->
-        <footer class="footer">
-            <ul class="footer-ul">
-                <p class="footer-copyright">&#xa9; copyright</p>
-                <p>&#124;</p>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-1"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-2"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-3"></a></li>
-                <li><a href="" class="footer-socialMediaIcon"><img src="" alt="smi-4"></a></li>
-            </ul>
-        </footer>
     </header>
 
-</body>
+    <!-- PAGE CONTENT -->
+    <main>
+        <!-- HEADER -->
+        <section class="main-title">
+            <h1 class="title-h1 abt-title">About</h1>
+        </section>
+        <!-- VIDEO & TEXT -->
+        <section class="pageText">
 
+        </section>
+    </main>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <ul class="footer-ul">
+            <p class="footer-copyright textColor-2">&#xa9; Angel Thomas</p>
+            <p>&#124;</p>
+            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram textColor-2"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter textColor-2"></a></li>
+            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr textColor-2"></a></li>
+            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest textColor-2"></a></li>
+        </ul>
+    </footer>
+</body>
+<script src="https://kit.fontawesome.com/f88d7ccc52.js" crossorigin="anonymous"></script>
 </html>
