--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 
     <title>WFB Final - About</title>
@@ -34,21 +39,73 @@
             <h1 class="title-h1 abt-title">About</h1>
         </section>
         <!-- VIDEO & TEXT -->
-        <section class="pageText">
+        <section class="about-pageText">
+            <video class="about-videoFalling" src="./img/falling-notebooks.mp4" autoplay muted loop></video>
+            <section class="about-pageText-body">
+                <h2 class="about-pageText-title">Lorem ipsum dolor sit amet.</h2>
+                <p class="about-pageText-blurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nulla
+                    libero animi aspernatur ipsa,
+                    incidunt hic accusantium nemo culpa a, harum excepturi! Dicta, ad aliquam. Autem adipisci ullam
+                    quidem ab.
+                    Non unde ad esse tenetur commodi fugit ea nemo aut minus harum vel libero pariatur suscipit
+                    dignissimos sit sequi nisi, quaerat est itaque a, numquam recusandae fuga quis? Et, vitae.
+                    Odit mollitia nemo impedit doloribus! Hic nemo deserunt praesentium aliquam! Libero fugit quasi
+                    cupiditate? Qui consequatur natus quod ratione magnam. Sit recusandae officiis inventore unde nam.
+                    Eius aliquam magnam minima?</p>
+                <h3 class="about-pageText-title">Lorem, ipsum dolor.</h3>
+                <p class="about-pageText-blurb">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed,
+                    doloremque? Voluptatem optio, nam
+                    reprehenderit ipsum quis explicabo cum modi sit earum, maxime consectetur nemo placeat facere quod
+                    ducimus totam veniam!
+                    Possimus architecto dolore id nobis velit, amet quos, exercitationem optio maxime ducimus soluta
+                    rerum consequatur dignissimos labore eum aperiam, quod quas quaerat quasi obcaecati rem
+                    consequuntur! Architecto, aspernatur unde. Soluta.</p>
+                <h3 class="about-pageText-title">Lorem, ipsum dolor.</h3>
+                <p class="about-pageText-blurb">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed,
+                    doloremque? Voluptatem optio, nam
+                    reprehenderit ipsum quis explicabo cum modi sit earum, maxime consectetur nemo placeat facere quod
+                    ducimus totam veniam!
+                    Possimus architecto dolore id nobis velit, amet quos, exercitationem optio maxime ducimus soluta
+                    rerum consequatur dignissimos labore eum aperiam, quod quas quaerat quasi obcaecati rem
+                    consequuntur! Architecto, aspernatur unde. Soluta.</p>
 
+            </section>
+            <section class="about-pageText-itemContainer">
+                <div class="about-pageText-items pTI-emails">
+                    <h4 class="pTI-title">Like what you see?</h4>
+                    <p class="pTI-text">Stay up to date on new products and get special deals!</p>
+                    <form class="pTI-form">
+                        <input class="pTI-input-email" type="email" placeholder="email address">
+                        <i class=" pTI-button fa-solid fa-square-caret-right"></i>
+                    </form>
+                </div>
+                <div class="about-pageText-items pTI-post">
+                    <h4 class="pTI-title">Putting your notebook to good use?</h4>
+                    <p class="pTI-text">Show us how on <a href="">IG</a> or <a>Tumblr</a>!</p>
+                </div>
+                <div class="about-pageText-items pTI-else">
+                    <h4 class="pTI-title">Used your notebook?</h4>
+                    <a href="./contact.html">Here's how to recycle it again yourself.</a>
+                </div>
+            </section>
         </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
         <ul class="footer-ul">
-            <p class="footer-copyright textColor-2">&#xa9; Angel Thomas</p>
-            <p>&#124;</p>
-            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram textColor-2"></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter textColor-2"></a></li>
-            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr textColor-2"></a></li>
-            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest textColor-2"></a></li>
+            <p class="footer-copyright">Copyright &#xa9; 2022. Angel Thomas.</p>
+            <p class="textColor-2">&#124;</p>
+            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram footer-link"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter footer-link"></a></li>
+            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr footer-link"></a></li>
+            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest footer-link"></a></li>
+            <p class="textColor-2">&#124;</p>
+            <li><a class="footer-link textColor-2" href="./index.html">Home</a></li>
+            <li><a class="footer-link textColor-2" href="./about.html">About</a></li>
+            <li><a class="footer-link textColor-2" href="./contact.html">Contact</a></li>
         </ul>
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/f88d7ccc52.js" crossorigin="anonymous"></script>
+
 </html>
