--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 
     <title>WFB Final - Contact</title>
@@ -35,21 +40,29 @@
         </section>
         <!-- VIDEO & TEXT -->
         <section>
-
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604061094058!2d-119.78796568430172!3d36.73206927923056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1663039506197!5m2!1sen!2sus"
+                width="30%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
         <ul class="footer-ul">
-            <p class="footer-copyright textColor-2">&#xa9; Angel Thomas</p>
-            <p>&#124;</p>
-            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram textColor-2"></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter textColor-2"></a></li>
-            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr textColor-2"></a></li>
-            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest textColor-2"></a></li>
+            <p class="footer-copyright">Copyright &#xa9; 2022. Angel Thomas.</p>
+            <p class="textColor-2">&#124;</p>
+            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram footer-link"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter footer-link"></a></li>
+            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr footer-link"></a></li>
+            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest footer-link"></a></li>
+            <p class="textColor-2">&#124;</p>
+            <li><a class="footer-link textColor-2" href="./index.html">Home</a></li>
+            <li><a class="footer-link textColor-2" href="./about.html">About</a></li>
+            <li><a class="footer-link textColor-2" href="./contact.html">Contact</a></li>
         </ul>
     </footer>
 
 </body>
 <script src="https://kit.fontawesome.com/f88d7ccc52.js" crossorigin="anonymous"></script>
+
 </html>
