--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 
     <title>WFB Final - Home</title>
@@ -31,14 +36,15 @@
         <!-- HERO -->
         <section class="hero">
             <div class="hero-textBox">
-                <h1 class="hero-header textColor-2"> Hero </h1>
-                <a href="./about.html" class="hero-aboutLink textColor-2">Prompt to go to about &#8594;</a>
+                <h1 class="hero-header textColor-2"> Notebooks Reimagined </h1>
+                <a href="./about.html" class="hero-aboutLink textColor-2">Learn how to love your paper twice today
+                    &#8594;</a>
             </div>
 
         </section>
         <!-- BODY IMG/PARAGRAPH -->
         <section class="pageText">
-            <img class="pageText-img" src="" alt="pageText-img" />
+            <video class="index-pageText-video" src="./img/writing-in-notebook.mp4" autoplay muted loop></video>
             <p class="pageText-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, magnam
                 repellat. Laudantium qui ea fugiat aut quaerat veritatis iusto quibusdam! Quas vitae nisi porro
                 distinctio perspiciatis. Nihil molestias tempora cumque.
@@ -53,15 +59,20 @@
     <!-- FOOTER -->
     <footer class="footer">
         <ul class="footer-ul">
-            <p class="footer-copyright textColor-2">&#xa9; Angel Thomas</p>
-            <p>&#124;</p>
-            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram textColor-2"></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter textColor-2"></a></li>
-            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr textColor-2"></a></li>
-            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest textColor-2"></a></li>
+            <p class="footer-copyright">Copyright &#xa9; 2022. Angel Thomas.</p>
+            <p class="textColor-2">&#124;</p>
+            <li><a href="https://www.instagram.com" target="_blank" class="fa fa-instagram footer-link"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter footer-link"></a></li>
+            <li><a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr footer-link"></a></li>
+            <li><a href="https://www.pinterest.com" target="_blank" class="fa fa-pinterest footer-link"></a></li>
+            <p class="textColor-2">&#124;</p>
+            <li><a class="footer-link textColor-2" href="./index.html">Home</a></li>
+            <li><a class="footer-link textColor-2" href="./about.html">About</a></li>
+            <li><a class="footer-link textColor-2" href="./contact.html">Contact</a></li>
         </ul>
     </footer>
 
 </body>
 <script src="https://kit.fontawesome.com/f88d7ccc52.js" crossorigin="anonymous"></script>
+
 </html>
