--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,23 @@
             <h1 class="title-h1 contact-title">Contact</h1>
         </section>
         <!-- VIDEO & TEXT -->
-        <section>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604061094058!2d-119.78796568430172!3d36.73206927923056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1663039506197!5m2!1sen!2sus"
-                width="30%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+        <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604061094058!2d-119.78796568430172!3d36.73206927923056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1663039506197!5m2!1sen!2sus"
+            width="30%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <form>
+            <h1>Shoot us a message!</h1></br>
+            <label for="contact-fName">First Name</label></br>
+            <input id="contact-fName" class="contact-Text" type="text" placeholder="First Name"></br>
+            <label for="contact-lName">Last Name</label></br>
+            <input id="contact-lName" class="contact-Text" type="text" placeholder="Last Name"></br>
+            <label for="contact-email">Email</label></br>
+            <input id="contact-email" class="contact-Text" type="email" placeholder="Email"></br>
+            <label for="contact-email">Message</label></br>
+            <textarea id="contact-descript" class="contact-Text"
+                placeholder="What can we do for you?">Hello! I would like to be contacted with more information on this product.</textarea></br>
+            <input id="submit-bttn" type="submit" value="Submit" />
+        </form>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
