--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <nav class="navbar">
             <ul class="navbar-ul">
                 <div class="navbar-left">
-                    <a href="index.html"><img id="logo" src="../img/reBind-small.png" alt="logo" /></a>
+                    <a href="https://bitwiseindustries.com/"><img id="logo" src="../img/reBind-small.png" alt="logo" /></a>
                 </div>
                 <div class="navbar-right">
                     <li><a class="navbar-link whiteText" href="./index.html">Home</a></li>
