--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -21,7 +22,8 @@
         <nav class="navbar">
             <ul class="navbar-ul">
                 <div class="navbar-left">
-                    <a href="index.html"><img id="logo" src="../img/reBind-small.png" alt="logo" /></a>
+                    <a href="https://bitwiseindustries.com/"><img id="logo" src="../img/reBind-small.png"
+                            alt="logo" /></a>
                 </div>
                 <div class="navbar-right">
                     <li><a class="navbar-link whiteText" href="./index.html">Home</a></li>
@@ -45,15 +47,15 @@
         <!-- BODY IMG/PARAGRAPH -->
         <section class="pageText">
             <video class="index-pageText-video" src="./img/writing-in-notebook.mp4" autoplay muted loop></video>
-            <p class="pageText-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, magnam
-                repellat. Laudantium qui ea fugiat aut quaerat veritatis iusto quibusdam! Quas vitae nisi porro
-                distinctio perspiciatis. Nihil molestias tempora cumque.
-                Eveniet ea nesciunt error illum voluptate inventore, illo assumenda rem? Quos quaerat sed eum.
-                Dolorum fugiat at in illo quisquam. Nulla reprehenderit dolorem sint eveniet tenetur dignissimos
-                quae dolore magnam?
-                Similique incidunt laborum soluta minima iste facilis ratione delectus accusamus est cum ullam,
-                recusandae aliquam debitis, magnam ipsum veniam veritatis enim deserunt possimus earum doloribus,
-                eius itaque? Labore, at molestiae.</p>
+            <div class="pageText-body">
+                <h1>Lorem, ipsum dolor.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, magnam
+                    repellat. Laudantium qui ea fugiat aut quaerat veritatis iusto quibusdam! Quas vitae nisi porro
+                    distinctio perspiciatis. Nihil molestias tempora cumque.
+                    Eveniet ea nesciunt error illum voluptate inventore, illo assumenda rem? Quos quaerat sed eum.
+                    Dolorum fugiat at in illo quisquam. Nulla reprehenderit dolorem sint eveniet tenetur dignissimos
+                    quae dolore magnam?</p>
+            </div>
         </section>
     </main>
     <!-- FOOTER -->
