--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         </section>
         <!-- BODY IMG/PARAGRAPH -->
-        <section class="pageText">
+        <!-- <section class="pageText">
             <video class="index-pageText-video" src="./img/writing-in-notebook.mp4" autoplay muted loop></video>
             <div class="pageText-body">
                 <h1>Lorem, ipsum dolor.</h1>
@@ -56,7 +56,7 @@
                     Dolorum fugiat at in illo quisquam. Nulla reprehenderit dolorem sint eveniet tenetur dignissimos
                     quae dolore magnam?</p>
             </div>
-        </section>
+        </section> -->
     </main>
     <!-- FOOTER -->
     <footer class="footer">
