--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <ul class="navbar-ul">
                 <div class="navbar-left">
-                    <a href="https://bitwiseindustries.com/"><img id="logo" src="../img/reBind-small.png"
+                    <a href="https://bitwiseindustries.com/"><img id="logo" src="./img/reBind-small.png"
                             alt="logo" /></a>
                 </div>
                 <div class="navbar-right">
